Fixed contact/footer overlapping background

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -23,20 +23,20 @@
         display: grid;
         grid-template-rows: 1fr repeat(2, max-content);
         grid-template-columns: max-content 1fr;
-        grid-row-gap: 1rem;
+        grid-row-gap: 2rem;
     }
     &__info-icon {
         margin-right: 2rem;
     }
     &__nav-top {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 4/8;
         margin-left: 3rem;
         display: grid;
         grid-row-gap: 1rem;
     }
     &__nav-bottom {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 8/10;
         margin-left: 3rem;
         display: grid;
